Fix image default wrong width

--- a/src/postcss/blocks/image.css
+++ b/src/postcss/blocks/image.css
@@ -15,6 +15,7 @@
   & img,
   & .image__img {
     position: static;
+    width: auto;
     max-width: 100%;
     height: auto;
   }
